Regression: Converting to mesh doesn't apply shape keys anymore #128839

Closed
opened 2024-10-10 12:21:35 +02:00 by Nika Kutsniashvili · 5 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70

Blender Version
Broken: version: 4.3.0 Beta, branch: blender-v4.3-release, commit date: 2024-10-09 07:49, hash: 33320b50dd4a
Worked: 4.2.2

Short description of error
Converting mesh to mesh, or Apply Visual Transform to Mesh operator is supposed to apply all modifiers and shape keys, but in 4.3 it doesn't anymore

Exact steps for others to reproduce the error

  1. Add shape key on default cube. Set value to 1 and sculpt something
  2. Go back to object mode and try converting it to mesh, or "Apply Visual Transform to Mesh"
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 560.70 **Blender Version** Broken: version: 4.3.0 Beta, branch: blender-v4.3-release, commit date: 2024-10-09 07:49, hash: `33320b50dd4a` Worked: 4.2.2 **Short description of error** Converting mesh to mesh, or Apply Visual Transform to Mesh operator is supposed to apply all modifiers and shape keys, but in 4.3 it doesn't anymore **Exact steps for others to reproduce the error** 1. Add shape key on default cube. Set value to 1 and sculpt something 2. Go back to object mode and try converting it to mesh, or "Apply Visual Transform to Mesh"
Nika Kutsniashvili added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-10-10 12:21:36 +02:00
Author
Contributor

EDIT: After more testing it seems shape keys get applied if object has any Generative modifier, but in other cases, even if it has deforming or data-affecting modifiers shape keys still dont get applied.

EDIT: After more testing it seems shape keys get applied if object has any Generative modifier, but in other cases, even if it has deforming or data-affecting modifiers shape keys still dont get applied.
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
Module
Modeling
and removed
Status
Needs Triage
labels 2024-10-10 13:15:06 +02:00
Member
Caused by 0791f53029 CC @ideasman42 CC @HooglyBoogly
Philipp Oeser added
Severity
High
and removed
Severity
Normal
labels 2024-10-10 14:18:50 +02:00
Campbell Barton self-assigned this 2024-10-10 14:31:57 +02:00

Form the original report, I assume Apply Visual Transform to Mesh should be Apply Visual Geometry to Mesh.
Replying under this assumption.

Form the original report, I assume `Apply Visual Transform to Mesh` should be `Apply Visual Geometry to Mesh`. _Replying under this assumption._

Notes from looking into this issue.

Clarifications:

  • Internally "Apply Visual Geometry to Mesh" calls OBJECT_OT_convert.

  • The following notes are specifically regarding cases when:

    • The number of vertices are not changed.
    • The mesh doesn't have a CD_SHAPEKEY vertex-layer (it typically doesn't have this layer).

From looking into this:

  • Shape keys have never been intentionally supported the OBJECT_OT_convert operator.

  • The current behavior from this report existed between v2.79 & 3.3 (probably before 2.7x too).

  • The change from be32882e1c caused shape-keys to be cleared even in cases where it wasn't intended.

  • Having OBJECT_OT_convert always clear the meshes shape-key has the advantage that the evaluated mesh coordinates are always used (WYSIWYG), with the disadvantage the shape-keys are lost.

  • While we could support shape-keys - so the resulting mesh has all the shape-keys from the original, integrating changes from the evaluated mesh (there are various ways this could be supported), doing so is outside the scope of resolving this report.


Since OBJECT_OT_convert never properly supported shape-keys & using the evaluated mesh coordinates is a reasonable expectation, I'll restore the behavior from 3.4..4.2 for the OBJECT_OT_convert operator.

Notes from looking into this issue. Clarifications: - Internally "Apply Visual Geometry to Mesh" calls `OBJECT_OT_convert`. - The following notes are specifically regarding cases when: - The number of vertices are not changed. - The mesh doesn't have a `CD_SHAPEKEY` vertex-layer _(it typically doesn't have this layer)._ From looking into this: - Shape keys have never been intentionally supported the `OBJECT_OT_convert` operator. - The current behavior from this report existed between v2.79 & 3.3 (probably before 2.7x too). - The change from be32882e1c40eb1cb72deab0bb6ee54fff917ca2 caused shape-keys to be cleared even in cases where it wasn't intended. - Having `OBJECT_OT_convert` always clear the meshes shape-key has the advantage that the evaluated mesh coordinates are always used (WYSIWYG), with the disadvantage the shape-keys are lost. - While we _could_ support shape-keys - so the resulting mesh has all the shape-keys from the original, integrating changes from the evaluated mesh _(there are various ways this could be supported),_ doing so is outside the scope of resolving this report. ---- Since `OBJECT_OT_convert` never properly supported shape-keys & using the evaluated mesh coordinates is a reasonable expectation, I'll restore the behavior from 3.4..4.2 for the `OBJECT_OT_convert` operator.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-10-11 07:49:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128839
No description provided.