Fix #128839: "Apply Visual Geometry to Mesh" doesn't apply shape-keys

Technically a regression in [0] although it matches behavior prior
to v3.3 going back to 2.7x. The fix for #101883 [1] added a check
for the vertex number changing after the number was zeroed,
causing the shape key to be cleared in most cases.

While the handling of shape-keys in OBJECT_OT_convert wasn't well
defined - clearing the shape-key means in the evaluated coordinates
are always used so it is preferable.

Now the operator ensures the old (un-evaluated) shape-key isn't used.

[0]: 0791f53029033b6c2a12f71ed6e86df09ab836f4
[1]: be32882e1c40eb1cb72deab0bb6ee54fff917ca2